<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:paddingBottom="20dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/set_num"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary">

        <EditText
            android:id="@+id/num_tableA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/hintGrey"
            android:hint="@string/tableA"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/darkGrey" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary">

        <EditText
            android:id="@+id/num_tableB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/hintGrey"
            android:hint="@string/tableB"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/darkGrey" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary">

        <EditText
            android:id="@+id/num_tableC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/hintGrey"
            android:hint="@string/tableC"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/darkGrey" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary">

        <EditText
            android:id="@+id/num_tableD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/hintGrey"
            android:hint="@string/tableD"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/darkGrey" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_save"
        android:textColor="@color/lightGrey"
        android:textStyle="bold" />
</LinearLayout>