<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/darkGrey">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/hintGrey"
            android:hint="@string/restaurant_name"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/darkGrey" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/darkGrey">

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/hintGrey"
            android:hint="@string/address"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textColor="@color/darkGrey" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/darkGrey">

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/hintGrey"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLines="1"
            android:textColor="@color/darkGrey" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/darkGrey" >

        <EditText
            android:id="@+id/cuisine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/hintGrey"
            android:hint="@string/cuisine"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textColor="@color/darkGrey" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="6dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/logo"
        android:textColor="@color/darkGrey"
        android:textSize="19sp"/>

    <ImageView
        android:id="@+id/imageUpload"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/upload_image" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_save"
        android:textColor="@color/lightGrey"
        android:textStyle="bold" />

</LinearLayout>