<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/numberDetailLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_margin="3dp">

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="2"
            app:rowCount="7"
            app:useDefaultMargins="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/number"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                app:srcCompat="@drawable/ic_local_play_black_24px"
                app:layout_column="0"
                app:layout_row="0" />

            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:paddingStart="10dp"
                android:paddingTop="12dp"
                app:layout_column="1"
                app:layout_row="0" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/status"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                app:srcCompat="@drawable/ic_local_bar_black_24px"
                app:layout_column="0"
                app:layout_row="1" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:paddingStart="10dp"
                android:paddingTop="12dp"
                app:layout_column="1"
                app:layout_row="1" />

            <ImageView
                android:id="@+id/tableIcon"
                android:visibility="gone"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:contentDescription="@string/table_name"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/table"
                app:layout_column="0"
                app:layout_row="2" />

            <TextView
                android:id="@+id/tableName"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/table_name"
                android:paddingStart="10dp"
                android:paddingTop="12dp"
                app:layout_column="1"
                app:layout_row="2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/customer"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                app:srcCompat="@drawable/ic_face_black_24px"
                app:layout_column="0"
                app:layout_row="3" />

            <TextView
                android:id="@+id/customerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer"
                android:paddingStart="10dp"
                android:paddingTop="12dp"
                app:layout_column="1"
                app:layout_row="3" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/telephone"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                app:srcCompat="@drawable/ic_phone_black_24px"
                app:layout_column="0"
                app:layout_row="4" />

            <TextView
                android:id="@+id/customerTelephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telephone"
                android:paddingStart="10dp"
                android:paddingTop="12dp"
                app:layout_column="1"
                app:layout_row="4" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/partyNumber"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                app:srcCompat="@drawable/ic_people_black_24px"
                app:layout_column="0"
                app:layout_row="5" />

            <TextView
                android:id="@+id/customerPartyNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/partyNumber"
                android:paddingStart="10dp"
                android:paddingTop="12dp"
                app:layout_column="1"
                app:layout_row="5" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/createdTime"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:srcCompat="@drawable/ic_date_range_black_24px"
                app:layout_column="0"
                app:layout_row="6" />

            <TextView
                android:id="@+id/numberCreatedTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="12dp"
                android:paddingBottom="10dp"
                android:text="@string/createdTime"
                app:layout_column="1"
                app:layout_row="6" />

        </android.support.v7.widget.GridLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/completeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/lightGrey"
        android:textStyle="bold"
        android:text="@string/complete" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:textColor="@color/lightGrey"
        android:textStyle="bold"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/waitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:textColor="@color/lightGrey"
        android:textStyle="bold"
        android:text="@string/change_to_waiting" />

    <!--<Button-->
        <!--android:id="@+id/closeButton"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_gravity="center"-->
        <!--android:background="@color/colorPrimary"-->
        <!--android:textColor="@color/lightGrey"-->
        <!--android:textStyle="bold"-->
        <!--android:text="@string/back" />-->

</LinearLayout>